@@ -135,6 +135,15 @@
     VisualTimer.prototype.init = function(options) {
         var t, gameTimerOptions;
 
+        // We keep the check for object, because this widget is often
+        // called by users and the restart methods does not guarantee
+        // an object.
+        options = options || {};
+        if ('object' !== typeof options) {
+            throw new TypeError('VisualTimer.init: options must be ' +
+                                'object or undefined. Found: ' + options);
+        }
+
         // Important! Do not modify directly options, because it might
         // modify a step-property. Will manual clone later.
         gameTimerOptions = {};
